--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require": {
         "php": "^7.3|^8.0",
-        "laravel/framework": "^7"
+        "laravel/framework": "^7|^8"
     },
     "minimum-stability": "dev",
     "extra": {
