--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     ],
     "require": {
         "php": "^7.3|^8.0",
+        "jecar/core": "*",
         "laravel/framework": "^7|^8"
     },
     "minimum-stability": "dev",
