--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,8 @@
                 "Jecar\\Cms\\Providers\\ServiceProvider"
             ]
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "9.5.x-dev"
     }
-
 }
